--- a/ShopYenSao.Application/ShopYenSao.Application.csproj
+++ b/ShopYenSao.Application/ShopYenSao.Application.csproj
@@ -16,4 +16,8 @@
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Features\Product\Commands\DeleteProduct\" />
+    </ItemGroup>
+
 </Project>
