--- a/ShopYenSao.Application/ShopYenSao.Application.csproj
+++ b/ShopYenSao.Application/ShopYenSao.Application.csproj
@@ -19,6 +19,8 @@
     <ItemGroup>
       <Folder Include="Features\OrderDetail\CreateOrderDetail\" />
       <Folder Include="Features\OrderDetail\Queries\GetById\" />
+      <Folder Include="Features\Payment\Queries\GetAll\" />
+      <Folder Include="Features\Payment\Queries\GetById\" />
       <Folder Include="Features\Product\Commands\DeleteProduct\" />
     </ItemGroup>
 
